--- a/namestonumbers.html
+++ b/namestonumbers.html
@@ -5,24 +5,23 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Scrabble Word Score Finder</title>
+    <title>Number to name changer</title>
   </head>
   <body>
     <div class="container">
-      <h1>Scrabble Word Score Finder</h1>
+      <h1>Number changer</h1>
 
       <form id="score-form">
         <div class="form-group">
-          <label for="word">Enter a word:</label>
-          <input id="word" type="text">
+          <label for="input">Enter a number:</label>
+          <input id="input" type="text">
         </div>
 
         <button type="submit" class="btn">Find out!</button>
       </form>
 
       <div id="result">
-        <p>Your Word: <span class="yourWord"></span></p>
-        <p>Your word is worth <span class="scrabbleScore"></span> points.</p>
+        <p>Your Number spelled out: <span class="numbername"></span></p>
       </div>
     </div>
   </body>
